@@ -119,17 +119,21 @@ If you used installed aider.el through melpa and package-install, just need to ~
   - aider-add-files-in-current-window :: Add all buffers in the current window.
 
 *** Write code
-  - aider-function-or-region-refactor :: If a region is selected, ask Aider to refactor the selected region. Otherwise, ask Aider to change / refactor the function under the cursor.
-    - A couple common used prompts provided when you are using aider-helm.el
   - aider-implement-todo :: Implement requirement in comments in-place, in current context.
     - If cursor is on a comment line, implement that specific comment in-place.
     - If there is a selection region of multi-line comments, implement code for those comments in-place.
     - If cursor is inside a function, implement TODOs for that function, otherwise implement TODOs for the entire current file.
       - The keyword (TODO by default) can be customized with the variable ~aider-todo-keyword-pair~. One example is to use AI! comment, which is as same as aider AI comment feature.
+  - aider-function-or-region-change :: If a region is selected, ask Aider to change the selected region. Otherwise, ask Aider to change / change the function under the cursor.
+    - A couple common used prompts provided when you are using aider-helm.el
+    - It support inline comment based existing code change requirement. To use this feature:
+      - Write a single line comment to describe the desired change for the current function (if the comment is in a function), or change on current added files (outside of a function).
+      - When the cursor is on the comment, type C-c a r, it will compose a prompt given the requirement in the comment, and then send to aider
+      - Review the code change, and accept it if you are happy with it.
 
 *** Support for Agile Development
   - aider-write-unit-test :: If the current buffer is main source code file, generate comprehensive unit tests for the current function or file. If the cursor is in a test source code file, when the cursor is on a test function, implement the test function. Otherwise, provide description to implement the test function (or spec).
-  - If main source code break and test function fails, use ~aider-function-or-region-refactor~ on the failed test function to ask Aider to fix the code to make the test pass.
+  - If main source code break and test function fails, use ~aider-function-or-region-change~ on the failed test function to ask Aider to fix the code to make the test pass.
   - aider-refactor-book-method :: for code refactoring using techniques from [[https://www.amazon.com/Refactoring-Improving-Existing-Addison-Wesley-Signature/dp/0134757599/ref=asc_df_0134757599?mcid=2eb8b1a5039a3b7c889ee081fc2132e0&hvocijid=16400341203663661896-0134757599-&hvexpln=73&tag=hyprod-20&linkCode=df0&hvadid=721245378154&hvpos=&hvnetw=g&hvrand=16400341203663661896&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9032161&hvtargid=pla-2281435180458&psc=1][Martin Flower's Refactoring book]], you can also let AI make the decision on how to refactor, example: [[https://github.com/tninja/aider.el/pull/146/commits/811a8eca47dfba3c52a33afba7bb11a8a69689b1][this commit]] addressing [[https://github.com/tninja/aider.el/pull/146#discussion_r2078182430][this comment]]
   - aider-pull-or-review-diff-file :: let aider to pull and review the code change.
 
